2.6.2:

2005-04-07  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/treeview.ccg:
	* gtk/src/treeview.hg: Rename 
	TreeView::_auto_store_on_cellrenderer_toggle_edited() to 
	TreeView::_auto_store_on_cellrenderer_toggle_edited_with_model()
	and add back the old _auto_store_on_cellrenderer_toggle_edited(), 
	so that it still exists for apps built with the old templates. 
	This is the only non-template code that was changed in the 
	previous commit.

2005-04-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.[hg|ccg]: append_*_(): Pass the model to the 
	private helper template functions, instead of the treeview, to 
	prevent the warning when closing the window while editing a cell.
	Bug #170855.

2005-04-07  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/display.hg:
	* gdk/src/displaymanager.hg:
	* gdk/src/pixbufloader.hg:
	* gdk/src/screen.hg:
	* gtk/src/accelgroup.hg:
	* gtk/src/action.hg:
	* gtk/src/actiongroup.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellrenderertoggle.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/combobox.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/filechooser.hg:
	* gtk/src/fontbutton.hg:
	* gtk/src/radioaction.hg:
	* gtk/src/radiomenuitem.hg:
	* gtk/src/range.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/togglebutton.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/toolbutton.hg:
	* gtk/src/toolitem.hg:
	* gtk/src/treeiter.hg:
	* gtk/src/uimanager.hg:
	* gtk/src/widget.hg:
	Added doxygen documentation for signals, based on 
	the C documentation (in the .c files) where that 
	documntation exists.

This is the gtkmm-2-6 branch. API additions should happen on 
the HEAD branch.

2005-03-19  Murray Cumming <murrayc@murrayc.com>

	* demos/gtk-demo/example_treeview_editable_cells.cc:
	* gtk/src/treeview.ccg:
	* gtk/src/treeview.hg:
	Test the result of _get_model_base() for a null refptr,
	to help avoid a crash when closing a window while the 
	cell renderer is in edit mode. Bug #170855.

2005-03-17  Claudio Saavedra <csaavedra@alumnos.utalca.cl>
