@@ -1,3 +1,11 @@
+2005-04-15  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/menus_and_toolbars/Makefile.am:
+	* examples/book/menus_and_toolbars/rain.png:
+	Add missing rain.png file and distribute it.
+	* examples/book/menus_and_toolbars/examplewindow.cc:
+	Catch the exception if the pixbuf file is not found.
+
 2.6.2:
 
 2005-04-07  Murray Cumming <murrayc@murrayc.com>
